# ProtonHorizon

./: .gitattributes  .gitignore  BUILD_REPORT.txt  CHANGELOG.md  CI.md  CMakeLists.txt  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  FINAL_SETUP.md  GITHUB_ACTIONS_SETUP.md  LICENSE  PROJECT_COMPLETION.md  PROJECT_OVERVIEW.md  PROJECT_READY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SUMMARY.md  TROUBLESHOOTING.md  build.gradle  build.sh  check-deps.sh  full-build.sh  generate-keystore.sh  gradle.properties  gradlew  init-git.sh  install.sh  keystore.properties.template  quick-build.sh  release.sh  run.sh  settings.gradle.kts
.github/workflows/: android-build.yml  build.yml  release.yml
app/: build.gradle  proguard-rules.json  proguard-rules.pro
app/src/: AndroidManifest.xml
app/src/main/java/com/protonhorizon/emulator/: ComponentManager.kt  MainActivity.kt  SettingsActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/res/values/: styles.xml
src/android/: ComponentManager.kt  DownloadManager.kt  EmulatorEngine.kt  GamepadManager.kt  MainActivity.kt  OptimizedComponentManager.kt  Version.kt  WineContext.kt  WinlatorOptimizer.kt  jni_bridge.cpp
src/android/utils/: Logger.kt  PreferencesManager.kt
src/core/: CMakeLists.txt  emulator.cpp  emulator.h
src/gamepad/: CMakeLists.txt  gamepad.cpp  gamepad.h
src/gpu/: CMakeLists.txt  gpu_context.cpp  gpu_context.h
src/proton/: CMakeLists.txt  proton_engine.cpp  proton_engine.h
